# wasm

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  Dockerfile  Gemfile  LICENSE.txt  MODULE.bazel  Makefile  README.md  README.tpl  WORKSPACE  WORKSPACE.bzlmod  build.sh  deps.bzl  go.mod  go.sum  http_archive.bzl  libjpeg-turbo.sum  liblzma.sum  libpano13.patch  libpano13.sum  libpng.sum  libtiff.sum  lz4.sum  nixpkgs.json  package-lock.json  package.bzl  package.json  package_deps.bzl  readme_test.sh  rules_foreign_cc.patch  rules_foreign_cc_675.patch  rules_foreign_cc_pr_676.patch  rules_nixpkgs_cc.patch  shell.nix  sources.sum  template.slim  (+10 more)
cmd/nm_json/: BUILD.bazel  nm_archive.go  nm_json.go  nm_lib.go  resolve_externs.go  symbol_table.go
cmd/write_me/: BUILD.bazel  write_me.go  write_me.tpl
cond/: BUILD.bazel
config/: BUILD.bazel  emscripten_config.py
docs/: BUILD.bazel  code-blocks.md  index.md  page.bzl
examples/bz2/: BUILD.bazel  bz2_api.spec.ts  bz2_api.ts
examples/ffmpeg/: BUILD.bazel  api.ts  demuxing.md  index.html  index.md  pix_fmts.md
examples/lz4/: BUILD.bazel  lz4_api.ts
examples/lzma/: BUILD.bazel  lzma_api.spec.ts  lzma_api.ts
lib/: BUILD.bazel  cache_entries.bzl  defs.bzl  http_archive.bzl  lib.bzl  package.bzl  package_deps.bzl
lib/aec/: BUILD.bazel  aec.patch  package.bzl
lib/aom/: BUILD.bazel  package.bzl
lib/bison/: BUILD.bazel  package.bzl
lib/blas/: BUILD.bazel  package.bzl
lib/boost/: BUILD.bazel  package.bzl
lib/bz2/: BUILD.bazel  bz2.patch  package.bzl
lib/c/: BUILD.bazel  gnu_c_symbols.bzl  package.bzl  regenerate_symbols.sh
lib/cblas/: BUILD.bazel  package.bzl
lib/ceres/: BUILD.bazel  package.bzl
lib/cmark/: BUILD.bazel  package.bzl
lib/cmarkgfm/: BUILD.bazel  package.bzl
lib/curl/: BUILD.bazel  package.bzl
lib/cxx/: BUILD.bazel  llvm_cxx_lib.bzl  llvm_cxx_symbols.bzl
lib/deflate/: BUILD.bazel  package.bzl
lib/eigen/: BUILD.bazel  package.bzl
lib/exiv2/: BUILD.bazel  package.bzl
lib/expat/: BUILD.bazel  package.bzl
lib/ffi/: BUILD.bazel  package.bzl
lib/ffmpeg/: BUILD.bazel  api.ts  ffmpeg.patch  package.bzl  types.ts
lib/fftw/: BUILD.bazel  package.bzl
lib/flex/: BUILD.bazel  package.bzl
lib/gcc/: BUILD.bazel  package.bzl
lib/gdal/: BUILD.bazel  configure.patch  gdal.patch  package.bzl
lib/geos/: BUILD.bazel  package.bzl
lib/geotiff/: BUILD.bazel  package.bzl
lib/gflags/: BUILD.bazel  package.bzl
lib/gif/: BUILD.bazel  gif.patch  gif_version.cc  package.bzl
lib/glog/: BUILD.bazel  package.bzl
lib/gmp/: BUILD.bazel  package.bzl
lib/grass/: BUILD.bazel  configure.bzl  fix_deps.bzl  grass.patch  package.bzl
lib/hdf/: BUILD.bazel  package.bzl
lib/hdf5/: BUILD.bazel  package.bzl
lib/iconv/: BUILD.bazel  package.bzl
lib/icu/: BUILD.bazel  package.bzl
lib/imath/: BUILD.bazel  package.bzl
lib/jpeg_turbo/: BUILD.bazel  package.bzl
lib/jpegturbo/: BUILD.bazel  package.bzl
lib/jq/: BUILD.bazel  package.bzl
lib/lcms/: BUILD.bazel  package.bzl
lib/lz4/: BUILD.bazel  CMakeLists.txt.patch  lz4_api.spec.js  package.bzl
lib/lzma/: BUILD.bazel  package.bzl
lib/lzo/: BUILD.bazel  package.bzl
lib/m4/: BUILD.bazel  package.bzl
lib/mpdecimal/: BUILD.bazel  package.bzl
lib/mpfr/: BUILD.bazel  package.bzl
lib/musl/: BUILD.bazel  package.bzl
lib/nasm/: BUILD.bazel  nasm.patch  package.bzl
lib/ncurses/: BUILD.bazel  ncurses.patch  package.bzl
lib/oniguruma/: BUILD.bazel  package.bzl
lib/open_jpeg/: BUILD.bazel  package.bzl
lib/open_ssl/: BUILD.bazel  package.bzl
lib/opencv/: BUILD.bazel  package.bzl
lib/openexr/: BUILD.bazel  package.bzl
lib/openjpeg/: BUILD.bazel  openjpeg.patch  package.bzl
lib/openssl/: BUILD.bazel  package.bzl
lib/pano13/: BUILD.bazel  CMakeLists.txt.patch  package.bzl
lib/png/: BUILD.bazel  package.bzl
lib/proj/: BUILD.bazel  package.bzl
lib/protobuf/: BUILD.bazel  package.bzl
lib/python/: BUILD.bazel  package.bzl
lib/quirc/: BUILD.bazel  package.bzl
lib/readline/: BUILD.bazel  package.bzl
lib/sdl/: BUILD.bazel  package.bzl
lib/spatia_lite/: BUILD.bazel  package.bzl
lib/sqlite/: BUILD.bazel  package.bzl
lib/suite_sparse/: BUILD.bazel  CMakeLists.txt.patch  libraries.bzl  package.bzl
lib/suitesparse/: BUILD.bazel  CMakeLists.txt.patch  libraries.bzl  package.bzl
lib/szip/: BUILD.bazel  package.bzl
lib/tcl/: BUILD.bazel  package.bzl
lib/tiff/: BUILD.bazel  CMakeLists.txt.patch  package.bzl
lib/tirpc/: BUILD.bazel  package.bzl
lib/vigra/: BUILD.bazel  output_cplusplus_version.cxx.patch  package.bzl
lib/vpx/: BUILD.bazel  package.bzl
lib/webp/: BUILD.bazel  package.bzl
lib/x264/: BUILD.bazel  (+2 more)
libjpeg_turbo/: BUILD.bazel  package.bzl
liblzma/: BUILD.bazel  package.bzl
libpano13/: BUILD.bazel  CMakeLists.txt.patch  bootstrap.patch  package.bzl
libpng/: BUILD.bazel  package.bzl
libtiff/: BUILD.bazel  package.bzl
lz4/: BUILD.bazel  package.bzl
notebook/: BUILD.bazel  compilation_mode_dbg.ts  compilation_mode_fastbuild.ts  compilation_mode_opt.ts  index.html  js.bzl  layout.html  main.ts  notebook.html  notebook.ts  notebook_page.bzl  template.slim
src/: BUILD.bazel  builtin_modules.rs  code_blocks.rs  compilation_mode_dbg.ts  compilation_mode_fastbuild.ts  dom.rs  dom_helpers.rs  layout.rs  lib.rs  loader.ts  modules.rs  notebook.rs  notebook_config.rs  page_layout.rs  prism.rs
style/: BUILD.bazel  page_layout.sass  style.sass  typography.sass
tests/: BUILD.bazel  readme_test.sh  workflow_test.go
toedi/: Cargo.toml  package-lock.json  package.json  webpack.config.js
toolchains/: BUILD.bazel  build_settings.bzl  em++.sh  utils.bzl
tools/: BUILD.bazel  archive_symbols.bzl  installed_files.bzl  javascript.bzl  javascript_target.bzl  mocha_test.bzl  npm.bzl  package.bzl  parsed_headers.bzl  slim.bzl  version_info.bzl  version_update.sh  wasm_library.bzl
vigra/: BUILD.bazel  CMakeLists.txt.patch  output_cplusplus_version.patch  package.bzl
webp/: BUILD.bazel  package.bzl
zlib/: BUILD.bazel  package.bzl
zstd/: BUILD.bazel  package.bzl
(+189 files in other folders)
