load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@rules_rust//wasm_bindgen:wasm_bindgen.bzl", "rust_wasm_bindgen")
load("//toolchains/cc:clang.bzl", "clang_toolchain")
load("//tools:slim.bzl", "slim_library")

clang_toolchain(name = "linux_x86_64_clang")

rust_wasm_bindgen(
    name = "runtime",
    visibility = ["//dist:__pkg__"],
    wasm_file = ":runtime_lib",
)

rust_shared_library(
    name = "runtime_lib",
    srcs = ["src/lib.rs"],
    aliases = aliases(normal = True),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(normal = True),
)

genrule(
    name = "entry_point",
    srcs = [":runtime"],
    outs = ["entry_point.js"],
    cmd = "cp $$(ls -1 $(locations :runtime) | grep /runtime.js) $@",
    visibility = ["//dist:__pkg__"],
)

slim_library(
    name = "template",
    srcs = ["template.slim"],
    visibility = ["//dist:__pkg__"],
)

# gazelle:prefix github.com/attilaolah/wasm
gazelle(name = "gazelle")

buildifier(name = "buildifier")

exports_files(
    [
        ".github/workflows/main.yml",
        "docker/Dockerfile",
        "tsconfig.json",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "go_mod",
    srcs = [
        "go.mod",
        "go.sum",
    ],
    visibility = ["//tests:consistency_tests"],
)

filegroup(
    name = "readme",
    srcs = ["README.md"],
    visibility = ["//tests:__pkg__"],
)

bzl_library(
    name = "workspace",
    srcs = ["workspace.bzl"],
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    deps = [
        "//lib:package",
        "//tools:package",
    ],
)

bzl_library(
    name = "http_archive",
    srcs = ["http_archive.bzl"],
    visibility = [":__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = [
        "//tests:consistency_tests",
        "//tools/llvm:__pkg__",
    ],
)
