[package]
name = "webnb"
description = "Interactive Markdown-based notebooks."
version = "0.1.0"
authors = ["Attila Oláh <attilaolah@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
js-sys = "0.3"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wee_alloc = { version = "0.4", optional = true }
yaml-front-matter = "0.1"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "Document",
  "DocumentFragment",
  "DomTokenList",
  "Element",
  "EventTarget",
  "Headers",
  "HtmlElement",
  "HtmlHeadElement",
  "HtmlLinkElement",
  "HtmlMetaElement",
  "HtmlTemplateElement",
  "MouseEvent",
  "Node",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "console",
]

#[target."cfg(debug_assertions)".dependencies]
#console_error_panic_hook = "0.1.5"

[dev-dependencies]
futures = "0.3.25"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.33"
wasm-pack = "0.10.3"
