[package]
name = "webnb"
description = "Interactive Markdown-based notebooks."
version = "0.1.5"
authors = ["Attila Oláh <attilaolah@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
js-sys = "0.3"
lazy_static = "1.4"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
slug = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yaml-front-matter = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Clipboard",
  "Document",
  "DocumentFragment",
  "DomStringMap",
  "DomTokenList",
  "Element",
  "Event",
  "EventInit",
  "EventTarget",
  "Headers",
  "HtmlButtonElement",
  "HtmlCollection",
  "HtmlDivElement",
  "HtmlElement",
  "HtmlHeadElement",
  "HtmlLinkElement",
  "HtmlMetaElement",
  "HtmlPreElement",
  "HtmlStyleElement",
  "HtmlTemplateElement",
  "MediaQueryList",
  "MouseEvent",
  "Navigator",
  "Node",
  "NodeList",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Storage",
  "StyleSheet",
  "StyleSheetList",
  "Window",
  "console",
]

[dev-dependencies]
console_error_panic_hook = "0.1"
futures = "0.3"
wasm-bindgen-test = "0.3"
wasm-pack = "0.12"
