module(name = "wasm")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_shell", version = "0.2.0")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
single_version_override(
    module_name = "rules_foreign_cc",
    patches = ["//:rules_foreign_cc.patch"],
    version = "0.10.1",
)
