load("@bazel_skylib//lib:selects.bzl", "selects")

selects.config_setting_group(
    name = "wasm",
    match_any = [
        ":wasm32",
        ":wasm64",
    ],
)

config_setting(
    name = "wasm32",
    values = {"cpu": "wasm32"},
)

config_setting(
    name = "wasm64",
    values = {"cpu": "wasm64"},
)

config_setting(
    name = "k8",
    values = {"cpu": "k8"},
)

platform(
    name = "wasm32_emscripten",
    constraint_values = ["@platforms//cpu:wasm32"],
)

MODES = [
    "dbg",
    "fastbuild",
    "opt",
]

[config_setting(
    name = mode,
    values = {"compilation_mode": mode},
) for mode in MODES]

[selects.config_setting_group(
    name = "k8_{}".format(mode),
    match_all = [
        ":k8",
        ":{}".format(mode),
    ],
) for mode in MODES]

[selects.config_setting_group(
    name = "wasm_{}".format(mode),
    match_all = [
        ":wasm",
        ":{}".format(mode),
    ],
) for mode in MODES]
