load("@bazel_skylib//lib:selects.bzl", "selects")

config_setting(
    name = "k8",
    constraint_values = ["@platforms//cpu:k8"],
)

config_setting(
    name = "wasm32",
    constraint_values = ["@platforms//cpu:wasm32"],
)

config_setting(
    name = "wasm64",
    constraint_values = ["@platforms//cpu:wasm64"],
)

selects.config_setting_group(
    name = "wasm",
    match_any = [
        ":wasm32",
        ":wasm64",
    ],
)

platform(
    name = "wasm32_emscripten",
    constraint_values = ["@platforms//cpu:wasm32"],
    parents = ["@rules_nixpkgs_core//platforms:host"],
)

MODES = [
    "dbg",
    "fastbuild",
    "opt",
]

[config_setting(
    name = mode,
    values = {"compilation_mode": mode},
) for mode in MODES]

[selects.config_setting_group(
    name = "k8_{}".format(mode),
    match_all = [
        ":k8",
        ":{}".format(mode),
    ],
) for mode in MODES]

[selects.config_setting_group(
    name = "wasm_{}".format(mode),
    match_all = [
        ":wasm",
        ":{}".format(mode),
    ],
) for mode in MODES]
