load("@bazel_skylib//lib:selects.bzl", "selects")

constraint_setting(name = "runtime")

constraint_value(
    name = "emscripten",
    constraint_setting = ":runtime",
)

config_setting(
    name = "wasm",
    constraint_values = [":emscripten"],
)

platform(
    name = "wasm32_emscripten",
    constraint_values = [":emscripten"],
    parents = ["@rules_nixpkgs_core//platforms:host"],
)

MODES = [
    "dbg",
    "fastbuild",
    "opt",
]

[config_setting(
    name = mode,
    values = {"compilation_mode": mode},
) for mode in MODES]

[selects.config_setting_group(
    name = "k8_{}".format(mode),
    match_all = [
        ":k8",
        ":{}".format(mode),
    ],
) for mode in MODES]
