load("@npm//http-server:index.bzl", "http_server")
load(":page.bzl", "page")

package(default_visibility = ["//visibility:public"])

page(
    name = "index",
    srcs = ["index.md"],
    loader_js = "../dist/pkg/webnb.js",
)

http_server(
    name = "server",
    data = [
        ":index",
        "//dist",
    ],
)
