load("@npm//http-server:index.bzl", "http_server")
load(":page.bzl", "page")

package(default_visibility = ["//visibility:public"])

page(
    name = "index",
    srcs = ["index.md"],
)

page(
    name = "code-blocks",
    srcs = ["code-blocks.md"],
)

http_server(
    name = "server",
    data = [
        ":code-blocks",
        ":index",
        "//dist",
        "//examples/ffmpeg:docs",
        "//examples/ffmpeg:ffmpeg_js",
        "//examples/ffmpeg:ffmpeg_wasm",
    ],
)
