load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    visibility = ["//:__pkg__"],
    deps = [
        "//lib/aec:package",
        "//lib/bison:package",
        "//lib/boost:package",
        "//lib/bz2:package",
        "//lib/cblas:package",
        "//lib/ceres:package",
        "//lib/curl:package",
        "//lib/deflate:package",
        "//lib/eigen:package",
        "//lib/exiv2:package",
        "//lib/expat:package",
        "//lib/ffi:package",
        "//lib/fftw:package",
        "//lib/flex:package",
        "//lib/gcc:package",
        "//lib/gdal:package",
        "//lib/geos:package",
        "//lib/geotiff:package",
        "//lib/gflags:package",
        "//lib/gif:package",
        "//lib/glog:package",
        "//lib/gmp:package",
        "//lib/grass:package",
        "//lib/hdf:package",
        "//lib/hdf5:package",
        "//lib/iconv:package",
        "//lib/jpegturbo:package",
        "//lib/jq:package",
        "//lib/lcms:package",
        "//lib/lz4:package",
        "//lib/lzma:package",
        "//lib/lzo:package",
        "//lib/m4:package",
        "//lib/mpdecimal:package",
        "//lib/mpfr:package",
        "//lib/musl:package",
        "//lib/ncurses:package",
        "//lib/oniguruma:package",
        "//lib/opencv:package",
        "//lib/openjpeg:package",
        "//lib/openssl:package",
        "//lib/pano13:package",
        "//lib/png:package",
        "//lib/proj:package",
        "//lib/protobuf:package",
        "//lib/python:package",
        "//lib/readline:package",
        "//lib/sdl:package",
        "//lib/sqlite:package",
        "//lib/suitesparse:package",
        "//lib/szip:package",
        "//lib/tcl:package",
        "//lib/tiff:package",
        "//lib/tirpc:package",
        "//lib/vigra:package",
        "//lib/webp:package",
        "//lib/xml:package",
        "//lib/xslt:package",
        "//lib/z:package",
        "//lib/zstd:package",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
)
