load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")

package(default_visibility = ["//:__subpackages__"])

cmake_external(
    name = "libjpeg_turbo",
    binaries = select({
        ":build_binaries": [
            "cjpeg",
            "djpeg",
            "jpegtran",
            "rdjpgcom",
            "tjbench",
            "wrjpgcom",
        ],
        "//conditions:default": [],
    }),
    cache_entries = {
        "CMAKE_INSTALL_DEFAULT_LIBDIR:PATH": "lib",
        "ENABLE_SHARED:BOOL": "OFF",
        "ENABLE_STATIC:BOOL": "ON",
        "WITH_JAVA:BOOL": "OFF",
    },
    lib_name = "libjpeg",
    lib_source = "@libjpeg_turbo//:all",
    static_libraries = ["libjpeg.a"],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    deps = ["//:http_archive"],
)

config_setting(
    name = "build_binaries",
    values = {"define": "build_binaries=true"},
)
