load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//tools/build_defs:configure.bzl", "configure_make")

package(default_visibility = ["//:__subpackages__"])

configure_make(
    name = "libpano13",
    configure_command = "bootstrap",
    configure_options = [
        "--enable-shared=no",
        "--enable-static=yes",
        "--without-java",
    ],
    lib_source = "@libpano13//:all",
    static_libraries = ["libpano13.a"],
    deps = [
        "//libjpeg_turbo",
        "//libpng",
        "//libtiff",
        "//zlib",
    ],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    deps = ["//:http_archive"],
)
