load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")

package(default_visibility = ["//:__subpackages__"])

cmake_external(
    name = "libpano13",
    binaries = select({
        ":build_binaries": [
            "panoinfo",
            "PTblender",
            "PTcrop",
            "PTinfo",
            "PTmasker",
            "PTmender",
            "PToptimizer",
            "PTroller",
            "PTtiff2psd",
            "PTtiffdump",
            "PTuncrop",
        ],
        "//conditions:default": [],
    }),
    lib_name = "libpano13",
    lib_source = "@libpano13//:all",
    static_libraries = ["libpano13.a"],
    deps = [
        "//libjpeg_turbo",
        "//libpng",
        "//libtiff",
        "//zlib",
    ],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    deps = ["//:http_archive"],
)

config_setting(
    name = "build_binaries",
    values = {"define": "build_binaries=true"},
)
