load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")

package(default_visibility = ["//:__subpackages__"])

cmake_external(
    name = "libpano13",
    binaries = select({
        ":build_binaries": [
            "panoinfo",
            "PTblender",
            "PTcrop",
            "PTinfo",
            "PTmasker",
            "PTmender",
            "PToptimizer",
            "PTroller",
            "PTtiff2psd",
            "PTtiffdump",
            "PTuncrop",
        ],
        "//conditions:default": [],
    }),
    cache_entries = {
        "BUILD_SHARED_LIBS:BOOL": "OFF",
        "JPEG_INCLUDE_DIR:PATH": "${EXT_BUILD_DEPS}/libjpeg/include",
        "JPEG_LIBRARY:FILEPATH": "${EXT_BUILD_DEPS}/libjpeg/lib/libjpeg.a",
        "PNG_LIBRARY:FILEPATH": "${EXT_BUILD_DEPS}/libpng/lib/libpng.a",
        "PNG_PNG_INCLUDE_DIR:PATH": "${EXT_BUILD_DEPS}/libpng/include",
        "TIFF_INCLUDE_DIR:PATH": "${EXT_BUILD_DEPS}/libtiff/include",
        "TIFF_LIBRARY:FILEPATH": "${EXT_BUILD_DEPS}/libtiff/lib/libtiff.a",
        "ZLIB_INCLUDE_DIR:PATH": "${EXT_BUILD_DEPS}/libz/include",
        "ZLIB_LIBRARY:FILEPATH": "${EXT_BUILD_DEPS}/libz/lib/libz.a",
    },
    lib_name = "libpano13",
    lib_source = "@libpano13//:all",
    static_libraries = ["libpano13.a"],
    deps = [
        "//libjpeg_turbo",
        "//libpng",
        "//lib/tiff",
        "//lib/z",
    ],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    deps = ["//:http_archive"],
)

config_setting(
    name = "build_binaries",
    values = {"define": "build_binaries=true"},
)
