load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//tools/build_defs:configure.bzl", "configure_make")

configure_make(
    name = "libpng",
    configure_options = [
        "--enable-shared=no",
        "--enable-static=yes",
    ],
    lib_source = "@libpng//:all",
    static_libraries = ["libpng.a"],
    deps = ["//zlib"],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    visibility = ["//:__pkg__"],
    deps = ["//:http_archive"],
)
