load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//tools/build_defs:configure.bzl", "configure_make")

package(default_visibility = ["//:__subpackages__"])

configure_make(
    name = "libpng",
    binaries = select({
        ":build_binaries": [
            "libpng-config",
            "libpng16-config",
            "png-fix-itxt",
            "pngfix",
        ],
        "//conditions:default": [],
    }),
    configure_options = [
        "--enable-shared=no",
        "--enable-static=yes",
    ],
    lib_name = "libpng",
    lib_source = "@libpng//:all",
    static_libraries = [
        "libpng.a",
        "libpng16.a",
    ],
    deps = ["//lib/z"],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    deps = ["//:http_archive"],
)

config_setting(
    name = "build_binaries",
    values = {"define": "build_binaries=true"},
)
