load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//tools/build_defs:configure.bzl", "configure_make")

package(default_visibility = ["//:__subpackages__"])

configure_make(
    name = "libtiff",
    configure_options = [
        "--enable-shared=no",
        "--enable-static=yes",
    ],
    lib_source = "@libtiff//:all",
    static_libraries = ["libtiff.a"],
    deps = [
        "//libjpeg_turbo",
        "//liblzma",
        "//zlib",
        "//zstd",
    ],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    deps = ["//:http_archive"],
)
