load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")

package(default_visibility = ["//:__subpackages__"])

cmake_external(
    name = "libtiff",
    binaries = select({
        ":build_binaries": [
            "fax2ps",
            "fax2tiff",
            "pal2rgb",
            "ppm2tiff",
            "raw2tiff",
            "tiff2bw",
            "tiff2pdf",
            "tiff2ps",
            "tiff2rgba",
            "tiffcmp",
            "tiffcp",
            "tiffcrop",
            "tiffdither",
            "tiffdump",
            "tiffgt",
            "tiffinfo",
            "tiffmedian",
            "tiffset",
            "tiffsplit",
        ],
        "//conditions:default": [],
    }),
    cache_entries = {
        "BUILD_SHARED_LIBS:BOOL": "OFF",
    },
    lib_name = "libtiff",
    lib_source = "@libtiff//:all",
    static_libraries = [
        "libtiff.a",
        "libtiffxx.a",
    ],
    deps = [
        "//libjpeg_turbo",
        "//liblzma",
        "//zlib",
        "//zstd",
    ],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    deps = ["//:http_archive"],
)

config_setting(
    name = "build_binaries",
    values = {"define": "build_binaries=true"},
)
