load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")

package(default_visibility = ["//:__subpackages__"])

cmake_external(
    name = "lz4",
    binaries = [
        "lz4",
        "lz4cat",
        "unlz4",
    ],
    cache_entries = {
        "BUILD_SHARED_LIBS:BOOL": "OFF",
        "BUILD_STATIC_LIBS:BOOL": "ON",
        "LZ4_BUILD_LEGACY_LZ4C:BOOL": "OFF",
    },
    cmake_relative_root = "contrib/cmake_unofficial",
    lib_name = "liblz4",
    lib_source = "@lz4//:all",
    static_libraries = ["liblz4.a"],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    deps = ["//:http_archive"],
)
